--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -56,7 +56,7 @@
 <div>
   <div>
     <h2>
-      Edit album
+      Edit album (ADMIN)
     </h2>
 
     <form action="/modify_album/<%= @the_album.id %>"  method="post" >
