--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -1,7 +1,7 @@
 <div>
   <div>
     <h1>
-      List of all albums
+      Your albums
     </h1>
   </div>
 </div>
@@ -10,8 +10,66 @@
 
 <div>
   <div>
+    <h2></h2>
+    <table border="1">
+      <tr>
+        <th>
+          ID
+        </th>
+
+        <th>
+          Name
+        </th>
+
+        <th>
+          Cards
+        </th>
+
+        <th>
+        </th>
+      </tr>
+
+      <% @list_of_albums.each do |an_album| %>
+      <tr>
+        <td>
+          <%= an_album.id %>
+        </td>
+
+        <td>
+          <%= an_album.name %>
+        </td>
+
+        <td>
+          <%= an_album.cards %>
+        </td>
+
+        <td>
+          <a href="/albums/<%= an_album.id %>">
+            Enter your collection
+          </a>
+        </td>
+      </tr>
+      <% end %>
+    </table>
+  </div>
+</div>
+
+<hr>
+
+<div>
+  <div>
+    <h3>
+      <a href="/albums/all_albums">Add another album?</a> Selector and button instead?
+    </h3>
+  </div>
+</div>
+
+<hr>
+
+<div>
+  <div>
     <h2>
-      Add a new album
+      Add a new album (ADMIN)
     </h2>
 
     <form action="/insert_album" method="post">
@@ -35,67 +93,6 @@
         Create album
       </button>
     </form>
-  </div>
-</div>
-
-<hr>
-<div>
-  <div>
-    <table border="1">
-      <tr>
-        <th>
-          ID
-        </th>
-
-        <th>
-          Name
-        </th>
-
-        <th>
-          Cards
-        </th>
-
-        <th>
-          Created at
-        </th>
-
-        <th>
-          Updated at
-        </th>
-
-        <th>
-        </th>
-      </tr>
-
-      <% @list_of_albums.each do |an_album| %>
-      <tr>
-        <td>
-          <%= an_album.id %>
-        </td>
-
-        <td>
-          <%= an_album.name %>
-        </td>
-
-        <td>
-          <%= an_album.cards %>
-        </td>
-
-        <td>
-          <%= time_ago_in_words(an_album.created_at) %> ago
-        </td>
-        <td>
-          <%= time_ago_in_words(an_album.updated_at) %> ago
-        </td>
-
-        <td>
-          <a href="/albums/<%= an_album.id %>">
-            Show details
-          </a>
-        </td>
-      </tr>
-      <% end %>
-    </table>
   </div>
 </div>
 
