--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -15,6 +15,33 @@
 </div>
 
 <hr>
+  
+  <div>
+    <form action="/insert_collection" method="post">
+      <div>
+        <label for="id_user_box"></label>
+        <input type="hidden" value="<%= session[:user_id] %>" id="user_id_box" name="query_id_user">
+      </div>
+
+      <div>
+        <label for="id_album_box"></label>
+        <input type="hidden" value="<%= @the_album.id %>" id="id_album_box" name="query_id_album">
+      </div>
+
+      <div>
+        <label for="card_number_box">
+    
+        </label>
+        <input type="number" id="card_number_box" name="query_card_number" min="1" max=<%= @the_album.cards %> placeholder="Card #">
+        <button>
+          Add card
+        </button>
+  Subtract cards form and button
+      </div>
+    </form>
+  </div>
+
+<hr>
 
 <div>
   <div>
@@ -31,14 +58,6 @@
 
         <th>
           Get card from:
-        </th>
-
-        <th>
-          Add card
-        </th>
-
-        <th>
-          Subtract card
         </th>
       </tr>
 
@@ -57,17 +76,6 @@
           3 users<%=  %>
         </td>
 
-        <td>
-          <a href="/albums/substract_card/<%= card_number %>">
-            +
-          </a>
-        </td>
-
-        <td>
-          <a href="/albums/substract_card/<%= card_number %>">
-            -
-          </a>
-        </td>
       </tr>
       <% end %>
     </table>
