--- a/app/views/albums/show.html.erb
+++ b/app/views/albums/show.html.erb
@@ -17,6 +17,7 @@
 <hr>
   
   <div>
+    <h4>Cards to complete album: <%= %> | Progress: <%= %>%</h4>
     <form action="/insert_collection" method="post">
       <div>
         <label for="id_user_box"></label>
@@ -53,11 +54,15 @@
         </th>
 
         <th>
-          Cards you own
+          You have:
         </th>
 
         <th>
-          Get card from:
+          Users with repeated card:
+        </th>
+
+        <th>
+          Users looking for this card:
         </th>
       </tr>
 
@@ -69,11 +74,28 @@
         </td>
 
         <td>
-          XXX <%=  %>
+          <% if @list_of_cards.count(card_number) != 0 %>
+            <%= @list_of_cards.count(card_number) %> cards
+          <% else %>
+            <%= "" %>
+          <% end %>
         </td>
 
         <td>
-          3 users<%=  %>
+          <% collectors_card = @list_of_collections.where({ card_number: card_number }).map_relation_to_array(:id_user) %>
+          <% collectors_repeated_card = collectors_card.find_all { |e| collectors_card.count(e) > 1 } %>
+          <% number_of_collectors_repeated = collectors_repeated_card.count %>
+          <% if number_of_collectors_repeated != 0 %>
+              <%= number_of_collectors_repeated %> users
+          <% else %>
+              <%= "" %>
+          <% end %>
+        </td>
+
+        <td>
+          <% if @list_of_collectors.uniq.count - @list_of_collections.where({ card_number: card_number }).map_relation_to_array(:id_user).uniq.count != 0 %>
+            <%= @list_of_collectors.uniq.count - @list_of_collections.where({ card_number: card_number }).map_relation_to_array(:id_user).uniq.count %> users
+          <% else end %>
         </td>
 
       </tr>
