Exchange button request

--- a/app/views/albums/exchange.html.erb
+++ b/app/views/albums/exchange.html.erb
@@ -52,7 +52,9 @@
         </td>
 
         <td>
-          Exchange
+          <form action="/exchange_request" method="post">
+                <button>Send exchange request</button>
+              </form>
         </td>
 
       </tr>
