hash progress exchange

--- a/app/views/albums/exchange.html.erb
+++ b/app/views/albums/exchange.html.erb
@@ -77,5 +77,6 @@
       <% end %>
     </table>
   </div>
-  My repeated cards: <%= @hash_repeated_cards %>
+  My repeated cards: <%= @repeated_cards_hash %>
+  Hash: <%= @exchange_hash%>
 </div>
