--- a/app/views/albums/index.html.erb
+++ b/app/views/albums/index.html.erb
@@ -65,34 +65,35 @@
 
 <hr>
 
-<div>
+<% if @current_user.id == 1 %>
   <div>
-    <h2>
-      Add a new album (ADMIN)
-    </h2>
+    <div>
+      <h2>
+        Add a new album (ADMIN)
+      </h2>
 
-    <form action="/insert_album" method="post">
-      <div>
-        <label for="name_box">
-          Name
-        </label>
+      <form action="/insert_album" method="post">
+        <div>
+          <label for="name_box">
+            Name
+          </label>
 
-        <input type="text" id="name_box" name="query_name">
-      </div>
+          <input type="text" id="name_box" name="query_name">
+        </div>
 
-      <div>
-        <label for="cards_box">
-          Cards
-        </label>
+        <div>
+          <label for="cards_box">
+            Cards
+          </label>
 
-        <input type="text" id="cards_box" name="query_cards">
-      </div>
+          <input type="text" id="cards_box" name="query_cards">
+        </div>
 
-      <button>
-        Create album
-      </button>
-    </form>
+        <button>
+          Create album
+        </button>
+      </form>
+    </div>
   </div>
-</div>
-
-<hr>
+  <hr>
+<% else end %>
