--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= csp_meta_tag %>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.css">
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
 
@@ -19,35 +19,60 @@
 
   <body>
 
-    <nav>
-      <ul>
-          <% if session[:user_id] == nil %>
-            <li>
-              <a href="/user_sign_in">
-                Sign in
-              </a>
-            </li>
-          <% else %>
-            <li>
-              User: <%= @current_user.first_name %> | 
-              <a href="/user_sign_out">
-                Sign out
-              </a>
-            </li>
-          <% end %>          
-          <li>
-            <a href="/">
-              Home
-            </a>
-          </li>
-          <li>
-            <a href="/exchanges">
-                Your exchanges
-              </a>
-          </li>
-      </ul>
-    </nav>
+    <div class="container py-5">
+    
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Collecti</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                                          
+              <% if session[:user_id] != nil %>
+              
+                <li class="nav-item">
+                  <a class="nav-link"> Welcome, <%= @current_user.first_name %></a>
+                </li>
 
-    <%= yield %>
+                <li class="nav-item">
+                  <a class="nav-link" href="/exchanges">Your exchanges</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/user_sign_out">Sign out</a>
+                </li>
+
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    My Profile
+                  </a>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" href="/exchanges">Your exchanges</a>
+                    <div class="dropdown-divider"></div>
+                  </div>
+                </li>
+
+
+              <% else %>
+                <li class="nav-item">
+                  <a class="nav-link" href="/user_sign_in">Sign in</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/user_sign_up">Sign up</a>
+                </li>
+              <% end %>
+              
+            </ul>
+            
+          </div>
+        </div>
+      </nav>  
+
+    </div>
+    
+    <div class="container py-5">
+      <%= yield %>
+    </div>
   </body>
 </html>
