--- a/app/views/user_authentication/edit_profile.html.erb
+++ b/app/views/user_authentication/edit_profile.html.erb
@@ -32,7 +32,7 @@
         <input id="password_confirmation_box" name="query_password_confirmation" placeholder="Confirm your password..." type="password">
       </div>
 
-      <button>
+      <button class="btn btn-primary btn-sm">
         Update account
       </button>
     </form>
