--- a/app/views/user_authentication/sign_in.html.erb
+++ b/app/views/user_authentication/sign_in.html.erb
@@ -11,7 +11,7 @@
     <input id="password_box" name="query_password" placeholder="Enter your password..." type="password">
   </div>
 
-  <button>
+  <button class="btn btn-primary btn-sm">
     Sign in
   </button>
 </form>
@@ -19,5 +19,5 @@
 <hr>
 
 <p>
-  Or, <a href="/user_sign_up">Sign up</a> instead.
+  Or, <a href="/user_sign_up">sign up</a> instead.
 </p>
